--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^16.0.30",
     "@types/react-native": "^0.51.2",
     "@types/react-test-renderer": "^16.0.0",
+    "apollo-codegen": "^0.18.3",
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
     "enzyme": "^3.2.0",
