Converts to using creat-react-native-app with typescript and implements own plaid authenticator.

--- a/app.json
+++ b/app.json
@@ -1,4 +1,11 @@
 {
   "name": "Allowances",
-  "displayName": "Allowances"
+  "displayName": "Allowances",
+  "expo": {
+    "sdkVersion": "26.0.0",
+    "packagerOpts": {
+      "sourceExts": ["ts", "tsx"],
+      "transformer": "node_modules/react-native-typescript-transformer/index.js"
+    }
+  }
 }
