--- a/package.json
+++ b/package.json
@@ -1,63 +1,68 @@
 {
-  "name": "allowances",
-  "version": "0.0.1",
+  "name": "allowances-app",
+  "version": "0.1.0",
   "private": true,
+  "main": "./node_modules/react-native-scripts-ts/build/bin/crna-entry.js",
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest",
-    "build": "node node_modules/.bin/tsc",
-    "build:watch": "node node_modules/.bin/tsc -w",
-    "codegen:intropect-schema": "apollo-codegen introspect-schema http://localhost:4000/graphql --output schema.json",
-    "codegen:generate": "apollo-codegen generate **/*.graphql --schema schema.json --target typescript --output operation-result-types.ts"
+    "start": "react-native-scripts-ts start",
+    "eject": "react-native-scripts-ts eject",
+    "android": "react-native-scripts-ts android",
+    "ios": "react-native-scripts-ts ios",
+    "test": "jest"
   },
-  "dependencies": {
-    "apollo-client-preset": "^1.0.5",
-    "graphql": "^0.12.3",
-    "graphql-tag": "^2.6.1",
-    "react": "16.0.0",
-    "react-apollo": "^2.0.4",
-    "react-native": "0.51.0"
+  "jest": {
+    "globals": {
+      "ts-jest": {
+        "useBabelrc": true
+      }
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "preset": "jest-expo",
+    "testMatch": [
+      "**/__tests__/**/*.[tj]s?(x)",
+      "**/?(*.)(spec|test).[tj]s?(x)"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    }
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.6",
     "@types/enzyme-to-json": "^1.5.0",
-    "@types/jest": "^21.1.9",
-    "@types/react": "^16.0.30",
-    "@types/react-native": "^0.51.2",
+    "@types/jest": "^22.2.2",
+    "@types/react": "^16.1.0",
+    "@types/react-native": "^0.52.21",
     "@types/react-test-renderer": "^16.0.0",
     "apollo-codegen": "^0.18.3",
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
-    "enzyme": "^3.2.0",
+    "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.0",
-    "jest": "21.2.1",
-    "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^16.2.0",
-    "react-test-renderer": "16.0.0",
-    "ts-jest": "^22.0.0",
-    "typescript": "^2.6.2"
+    "enzyme-to-json": "^3.3.3",
+    "jest-expo": "26.0.0",
+    "react-native-scripts-ts": "1.13.0",
+    "react-native-typescript-transformer": "^1.2.3",
+    "react-test-renderer": "16.3.0-alpha.1",
+    "ts-jest": "^22.4.2",
+    "tslib": "^1.9.0",
+    "typescript": "^2.8.1"
   },
-  "jest": {
-    "preset": "react-native",
-    "setupFiles": [
-      "<rootDir>/jest-configure.js"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "transform": {
-      "^.+\\.(js)$": "<rootDir>/node_modules/babel-jest",
-      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "testPathIgnorePatterns": [
-      "\\.snap$",
-      "<rootDir>/node_modules/",
-      "<rootDir>/lib/"
-    ],
-    "cacheDirectory": ".jest/cache"
+  "dependencies": {
+    "apollo-boost": "^0.1.4",
+    "enzyme": "^3.3.0",
+    "enzyme-to-json": "^3.3.3",
+    "expo": "^26.0.0",
+    "graphql-tag": "^2.8.0",
+    "react": "16.3.0-alpha.1",
+    "react-apollo": "^2.1.3",
+    "react-native": "0.54.0",
+    "react-native-plaid-link": "^1.3.5"
   }
 }
