--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "allowances-app",
-  "version": "0.1.0",
+  "name": "allowances",
+  "version": "0.0.1",
   "private": true,
   "main": "./node_modules/react-native-scripts-ts/build/bin/crna-entry.js",
   "scripts": {
