--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "eject": "react-native-scripts-ts eject",
     "android": "react-native-scripts-ts android",
     "ios": "react-native-scripts-ts ios",
-    "test": "jest"
+    "test": "jest",
+    "codegen:intropect-schema": "apollo-codegen introspect-schema http://localhost:4000/graphql --output schema.json",
+    "codegen:generate": "apollo-codegen generate **/*.graphql --schema schema.json --target typescript --output operation-result-types.ts"
   },
   "dependencies": {
     "apollo-boost": "^0.1.4",
+    "apollo-client-preset": "^1.0.5",
     "enzyme": "^3.3.0",
     "enzyme-to-json": "^3.3.3",
     "expo": "^26.0.0",
+    "graphql": "^0.12.3",
     "graphql-tag": "^2.8.0",
     "react": "16.3.0-alpha.1",
     "react-apollo": "^2.1.3",
